[project]
authors = [{name = "sosucat", email = "pengu1n.i843@gmail.com"}]
name = "virtual-livechat"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ollama>=0.6.2,<0.7"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
virtual_livechat = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11,<3.15"
pyautogui = ">=0.9.54,<0.10"
pillow = ">=12.3.0,<13"
