[project]
authors = [{name = "sosucat", email = "pengu1n.i843@gmail.com"}]
name = "virtual-livechat"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ollama>=0.6.2,<0.7", "edge-tts>=7.2.1", "speechrecognition>=3.17.0,<4", "sounddevice>=0.5.5,<0.6", "soundfile>=0.14.0,<0.15", "pyaudio>=0.2.14,<0.3", "pydub>=0.25.1", "scipy>=1.14.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
virtual_livechat = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11,<3.15"
pyautogui = ">=0.9.54,<0.10"
pillow = ">=12.3.0,<13"
ddgs = ">=9.14.4,<10"
pytesseract = ">=0.3.13,<0.4"
pygame = ">=2.6.1,<3"
pydub = ">=0.25.1,<0.26"
scipy = ">=1.18.0,<2"
